# howto-rust-pulsar

./: .gitignore  Cargo.toml
consumer/: Cargo.toml
consumer/src/: action.rs  main.rs  model.rs  setting.rs
producer/: Cargo.toml
producer/src/: main.rs  model.rs  setting.rs  tx.proto
src/: main.rs
