[package]
name = "producer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.117"
serde = { version = "1.0.201", features = ["derive"] }
anyhow = "1.0.83"
log = { version = "0.4.21", features = ["release_max_level_info"] }
env_logger = "0.11.3"
chrono = { version = "0.4.38", default-features = false, features = ["clock","serde"] }
once_cell = "1.19.0"
dotenvy = "0.15.7"

tokio = { version = "1.37.0", features = ["full"] }

tokio-postgres = { version = "0.7.10", features=["with-serde_json-1","with-chrono-0_4"]}
postgres-from-row = "0.5.2"

pulsar = { version = "6.2.0", default-features = false, features = ["tokio-runtime", "compression"]}
uuid = { version = "1.8.0", features = ["v4", "fast-rng"]}
duplicate = "1.0.0"
strum = { version = "0.26.2", features = ["derive"] }

[profile.release]
lto = true
strip = true
codegen-units = 1
