[package]
name = "producer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.137"
serde = { version = "1.0.217", features = ["derive"] }
anyhow = "1.0.95"
log = { version = "0.4.25", features = ["release_max_level_info"] }
env_logger = "0.11.6"
chrono = { version = "0.4.39", default-features = false, features = ["clock","serde"] }
dotenvy = "0.15.7"
envy = "0.4.2"
tokio = { version = "1.43.0", features = ["full"] }

tokio-postgres = { version = "0.7.12", features=["with-serde_json-1","with-chrono-0_4"]}
postgres-from-row = "0.5.2"

pulsar = { version = "6.3.0", default-features = false, features = ["tokio-runtime", "compression"]}
uuid = { version = "1.12.1", features = ["v4", "fast-rng"]}
duplicate = "2.0.0"
strum = { version = "0.26.3", features = ["derive"] }

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"
opt-level = 3
